<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlBookReadRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_leather_bg"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flReadWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:layerType="hardware" />

    <TextView
        android:id="@+id/tvDownloadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBookReadBottom"
        android:background="@color/common_h3"
        android:padding="@dimen/ac_broad"
        android:textSize="@dimen/tt_36"
        android:singleLine="true"
        app:layout_auto_baseheight="textSize|margin|padding"
        android:text="@string/book_read_download_progress"
        android:textColor="@color/white"
        android:visibility="gone" />

    <include layout="@layout/layout_read_aa_set" />

    <include layout="@layout/layout_read_mark" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/llBookReadBottom"
        android:layout_width="match_parent"
        android:layout_height="136px"
        android:layout_alignParentBottom="true"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvBookReadMode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_mode_day"
            app:layout_auto_baseheight="textSize|margin|padding"
            android:paddingTop="@dimen/ac_broad"
            android:paddingBottom="@dimen/ac_broad"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_settings"
            app:layout_auto_baseheight="textSize|margin|padding"
            android:paddingTop="@dimen/ac_broad"
            android:paddingBottom="@dimen/ac_broad"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadDownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/ac_broad"
            android:paddingBottom="@dimen/ac_broad"
            android:gravity="center"
            android:text="@string/book_read_download"
            app:layout_auto_baseheight="textSize|margin|padding"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookMark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            app:layout_auto_baseheight="textSize|margin|padding"
            android:text="@string/book_read_mark"
            android:paddingTop="@dimen/ac_broad"
            android:paddingBottom="@dimen/ac_broad"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadToc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            app:layout_auto_baseheight="textSize|margin|padding"
            android:text="@string/book_read_toc"
            android:paddingTop="@dimen/ac_broad"
            android:paddingBottom="@dimen/ac_broad"
            android:textColor="@color/book_read_bottom_text"
            android:textSize="@dimen/tt_44" />

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/llBookReadTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:padding="@dimen/ac_margin"
            android:layout_height="wrap_content"
            android:src="@drawable/ab_back" />

        <TextView
            android:id="@+id/tvBookReadTocTitle"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/tt_44"
            android:layout_weight="1"
            android:singleLine="true"
            tools:text="武侠世界自由行" />


        <TextView
            android:id="@+id/tvBookReadReading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/book_read_reading"
            android:paddingLeft="@dimen/ac_broad"
            android:paddingRight="@dimen/ac_broad"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadCommunity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/ac_broad"
            android:paddingRight="@dimen/ac_broad"
            android:text="@string/book_read_community"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadIntroduce"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/book_read_introduce"
            android:paddingLeft="@dimen/ac_broad"
            android:paddingRight="@dimen/ac_broad"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/tt_44" />

        <TextView
            android:id="@+id/tvBookReadSource"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/ac_broad"
            android:paddingRight="@dimen/ac_broad"
            android:gravity="center"
            android:text="@string/book_read_change_source"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/tt_44" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>