<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_auto_baseheight="textSize|margin|padding"
    android:padding="@dimen/ac_broad">


    <EditText
        android:id="@+id/account"
        android:hint="账号"
        android:layout_marginLeft="@dimen/ac_margin"
        android:layout_marginRight="@dimen/ac_margin"
        android:layout_marginTop="60px"
        android:paddingLeft="@dimen/ac_broad"
        android:paddingRight="@dimen/ac_broad"
        android:textColor="@color/common_h1"
        android:textSize="@dimen/tt_44"
        android:text="15805930942"
        app:layout_auto_baseheight="textSize"
        app:layout_auto_basewidth="margin|padding"
        android:background="@drawable/gray_rect"
        android:layout_width="700px"
        android:layout_height="110px" />

    <EditText
        android:id="@+id/password"
        android:hint="密码"
        android:layout_marginLeft="@dimen/ac_margin"
        android:layout_marginRight="@dimen/ac_margin"
        android:paddingLeft="@dimen/ac_broad"
        android:paddingRight="@dimen/ac_broad"
        android:text="a123456"
        android:textColor="@color/common_h1"
        android:textSize="@dimen/tt_44"
        android:layout_marginTop="@dimen/ac_margin"
        app:layout_auto_baseheight="textSize"
        app:layout_auto_basewidth="margin|padding"
        android:background="@drawable/gray_rect"
        android:layout_width="700px"
        android:layout_height="110px" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="@dimen/ac_margin"
        android:textSize="@dimen/tt_44"
        android:text="@string/pop_login"
        android:clickable="true"
        app:layout_auto_baseheight="textSize|padding|margin"
        android:background="@drawable/shape_common_green_bg"
        android:textColor="@color/white"
        android:layout_width="700px"
        android:layout_height="110px" />


    <TextView
        android:text="@string/pop_third_login_des1"
        android:layout_marginTop="80px"
        android:layout_marginLeft="@dimen/ac_margin"
        android:layout_marginRight="@dimen/ac_margin"
        app:layout_auto_baseheight="margin"
        android:textSize="@dimen/tt_42"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/ac_broad"
        android:text="@string/pop_third_login_des2"
        android:layout_marginLeft="@dimen/ac_margin"
        android:layout_marginRight="@dimen/ac_margin"
        app:layout_auto_baseheight="margin"
        android:textColor="@color/orange"
        android:textSize="@dimen/tt_44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/ac_margin"
        android:layout_marginBottom="@dimen/ac_margin"
        android:layout_width="700px"
        app:layout_auto_baseheight="textSize|padding|margin"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivQQ"
            android:layout_width="160px"
            android:layout_height="160px"
            android:clickable="true"
            android:gravity="center"
            app:layout_auto_baseheight="width"
            android:background="@drawable/share_qq" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivSina"
            android:layout_width="160px"
            android:layout_height="160px"
            android:clickable="true"
            app:layout_auto_baseheight="width"
            android:gravity="center"
            android:background="@drawable/share_webo" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivWechat"
            android:layout_width="160px"
            android:layout_height="160px"
            app:layout_auto_baseheight="width"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/share_wechat" />

    </LinearLayout>



</com.zhy.autolayout.AutoLinearLayout>